[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gitpython>=3.1.44",
    "langchain>=0.3.19",
    "langchain-anthropic>=0.3.7",
    "langchain-core>=0.3.35",
    "langgraph>=0.2.73",
    "typing-extensions>=4.12.2",
]
